# Checkers-AI

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rmCMake.sh
include/: checkerboard.hpp  cxxopts.hpp  globalconsts.hpp  managerSFML.hpp  negamax.hpp  player.hpp  singleGameLoop.hpp
src/: checkerboard.cpp  globalconsts.cpp  managerSFML.cpp  negamax.cpp  player.cpp  singleGameLoop.cpp  tests.cpp
